src/parse/snapshots/protox__parse__tests__parse_field-2.snap
---
source: src/parse/tests.rs
expression: parser.parse_field()
---
Ok(
    Map(
        Map {
            label: None,
            key_ty: String,
            key_ty_span: 15..21,
            ty: Int32,
            name: Ident {
                value: "projects",
                span: 30..38,
            },
            number: Int {
                negative: false,
                value: 3,
                span: 41..42,
            },
            options: [],
            comments: Comments {
                leading_detached_comments: [],
                leading_comment: Some(
                    "leading",
                ),
                trailing_comment: Some(
                    "trailing",
                ),
            },
            span: 11..43,
        },
    ),
)
