src/parse/snapshots/protox__parse__tests__parse_field-6.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a field type",
            found: Semicolon,
            span: 4..5,
        },
    ],
)
