src/parse/snapshots/protox__parse__tests__parse_field.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_field() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Field {
        label: None,
        name: Ident {
            value: "projects",
            span: 21..29,
        },
        kind: Map {
            ty_span: 3..20,
            key_ty: String,
            key_ty_span: 4..10,
            value_ty: Named(
                TypeName {
                    leading_dot: None,
                    name: FullIdent {
                        parts: [
                            Ident {
                                value: "Project",
                                span: 12..19,
                            },
                        ],
                    },
                },
            ),
            value_ty_span: 12..19,
        },
        number: Int {
            negative: false,
            value: 3,
            span: 32..33,
        },
        options: None,
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..34,
    },
)
