src/parse/snapshots/protox__parse__tests__parse_file-12.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    File {
        span: 35..63,
        syntax: Proto2,
        syntax_span: None,
        package: None,
        imports: [],
        options: [
            Option {
                body: OptionBody {
                    name: [
                        Ident(
                            Ident {
                                value: "optimize_for",
                                span: 42..54,
                            },
                        ),
                    ],
                    value: Ident(
                        Ident {
                            value: "SPEED",
                            span: 57..62,
                        },
                    ),
                },
                comments: Comments {
                    leading_detached_comments: [],
                    leading_comment: Some(
                        " code goes brrr\n",
                    ),
                    trailing_comment: None,
                },
                span: 35..63,
            },
        ],
        items: [],
    },
)
